Fix spacing issue in header

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ input[type=button] {
     flex-direction: column;
     box-shadow: rgba(0,0,0, 0.5) 0 2px 5px;
     z-index: 1;
+    line-height: 2em;
 }
 
 .pinned {
